Updated THREE.Extras.RenderManager and corresponding example. Optimized webgl_tron_iso example.
Signed-off-by: Thibaut Despoulain <thibaut.despoulain@bkcore.com>

--- a/webgl_scenemanager.html
+++ b/webgl_scenemanager.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>THREE.RenderManager example</title>
+		<title>THREE.Extras.RenderManager example</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		<div id="d">
-			<h1>THREE.RenderManager</h1>
+			<h1>THREE.Extras.RenderManager</h1>
 			<p>A Three.js extension by <a href="http://bkcore.com">Thibaut Despoulain</a>.</p>
 			<p><strong>Setup to render: </strong><button onclick="renderManager.setCurrent('FirstSetup');">FirstSetup</button> <button onclick="renderManager.setCurrent('SecondSetup');">SecondSetup</button> <button  onclick="renderManager.setCurrent('ThirdSetup');">ThirdSetup</button> 
 		</div>
@@ -72,7 +72,7 @@
 
 //>>>>>>>>>>>>>>// RENDER MANAGER
 				
-				renderManager = new THREE.RenderManager(renderer);
+				renderManager = new THREE.Extras.RenderManager(renderer);
 
 				// SCENE 1
 
